--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,18 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "WATCHPACK_POLLING=true next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/eslint-plugin-next": "^15.2.4",
     "@radix-ui/react-slot": "^1.1.2",
     "@tanstack/react-query": "^5.71.10",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "lucide-react": "^0.487.0",
-    "next": "15.3.0-canary.28",
+    "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.1.0",
