Set up logging using ELK stack

--- a/backend/auth/Dockerfile
+++ b/backend/auth/Dockerfile
@@ -2,6 +2,10 @@ FROM maven:3.9.9-amazoncorretto-24-alpine AS builder
 
 WORKDIR /app
 
+COPY pom.xml .
+
+RUN mvn dependency:go-offline
+
 COPY . .
 
 EXPOSE 8080
