feat: add AuthRedirectListener to handle authentication failures and redirect to login
test: create unit tests for LoginForm component

test: create unit tests for WelcomeMessage component

fix: enhance WelcomeMessage component to include loading skeletons

test: add unit tests for api-client to handle authentication and token refresh logic

refactor: update api-client to use triggerAuthFailure on 401 errors

feat: implement event system for authentication failure handling

chore: add vitest configuration and setup for testing environment

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "WATCHPACK_POLLING=true next dev --turbopack",
+    "dev": "cross-env NODE_OPTIONS='--inspect' WATCHPACK_POLLING=true next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest"
   },
   "dependencies": {
     "@next/eslint-plugin-next": "^15.2.4",
@@ -27,17 +28,25 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.29.0",
     "@typescript-eslint/parser": "^8.29.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "cross-env": "^7.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "eslint-config-prettier": "^10.1.1",
+    "jsdom": "^26.0.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.1.1",
+    "vitest-mock-axios": "^0.1.0"
   }
 }
