--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "vitest"
+    "test": "vitest",
+    "test:e2e": "cd ../e2e && pnpm exec playwright test --ui"
   },
   "dependencies": {
     "@next/eslint-plugin-next": "^15.2.4",
