--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,13 @@
     "start": "next start",
     "lint": "next lint",
     "test": "vitest",
-    "test:e2e": "cd ../e2e && pnpm exec playwright test --ui"
+    "test:e2e": "cd ../e2e && pnpm exec playwright test --ui",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.8",
+    "@apollo/client-integration-nextjs": "^0.12.2",
+    "@apollo/experimental-nextjs-app-support": "^0.12.2",
     "@next/eslint-plugin-next": "^15.2.4",
     "@radix-ui/react-slot": "^1.1.2",
     "@tanstack/react-query": "^5.71.10",
@@ -28,6 +32,10 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@graphql-codegen/cli": "^5.0.6",
+    "@graphql-codegen/typescript": "^4.1.6",
+    "@graphql-codegen/typescript-operations": "^4.6.1",
+    "@graphql-codegen/typescript-react-apollo": "^4.3.3",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -41,6 +49,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "eslint-config-prettier": "^10.1.1",
+    "graphql": "^16.11.0",
     "jsdom": "^26.0.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
