--- a/gateway/package.json
+++ b/gateway/package.json
@@ -6,9 +6,18 @@
 	"dependencies": {
 		"@apollo/gateway": "^2.10.2",
 		"@apollo/server": "^4.12.1",
+		"@types/body-parser": "^1.19.5",
+		"@types/express": "^4.17.22",
+		"@types/express-serve-static-core": "^4.19.6",
+		"body-parser": "^2.2.0",
+		"cors": "^2.8.5",
+		"express": "^4.21.2",
 		"graphql": "^16.11.0",
 		"node-fetch": "^3.3.2",
 		"nodemon": "^3.1.10",
 		"zod": "^3.25.42"
+	},
+	"devDependencies": {
+		"@types/cors": "^2.8.18"
 	}
 }
