--- a/gateway/package.json
+++ b/gateway/package.json
@@ -1,7 +1,8 @@
 {
 	"scripts": {
-		"start": "npx tsx src/gateway.ts",
-		"dev": "nodemon --watch src --ext ts --exec npx tsx src/gateway.ts"
+		"start": "npx --node-options='--inspect=0.0.0.0:9229' tsx src/gateway.ts",
+		"dev": "npx --node-options='--inspect=0.0.0.0:9229' tsx --inspect-brk src/gateway.ts",
+		"debug": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'node --inspect=0.0.0.0:9229 --require ts-node/register src/gateway.ts'"
 	},
 	"dependencies": {
 		"@apollo/gateway": "^2.10.2",
@@ -18,6 +19,7 @@
 		"zod": "^3.25.42"
 	},
 	"devDependencies": {
-		"@types/cors": "^2.8.18"
+		"@types/cors": "^2.8.18",
+		"ts-node": "^10.9.2"
 	}
 }
