Remove hardcoded values, add filter to only allow requests originating from gateway through to auth endpoints, refactor gateway

--- a/backend/auth/src/main/resources/application.example.yml
+++ b/backend/auth/src/main/resources/application.example.yml
@@ -28,6 +28,10 @@ spring:
                         redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
                         scope: user:email
 
+    graphql:
+        graphiql:
+            enabled: true
+
 jwt:
     secret:
         key: <JWT_SECRET_KEY>
