--- a/gateway/tsconfig.json
+++ b/gateway/tsconfig.json
@@ -1,14 +1,15 @@
 {
 	"compilerOptions": {
 		"target": "ES2020",
-		"module": "commonjs",
+		"module": "nodenext",
 		"outDir": "./dist",
 		"rootDir": "./src",
 		"strict": true,
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 		"skipLibCheck": true,
-		"sourceMap": true
+		"sourceMap": true,
+		"moduleResolution": "nodenext"
 	},
 	"include": ["src/**/*"],
 	"exclude": ["node_modules", "dist"]
