--- a/gateway/package.json
+++ b/gateway/package.json
@@ -2,6 +2,7 @@
 	"scripts": {
 		"start": "npx --node-options='--inspect=0.0.0.0:9229' tsx src/gateway.ts",
 		"dev": "npx --node-options='--inspect=0.0.0.0:9229' tsx --inspect-brk src/gateway.ts",
+		"test": "vitest",
 		"debug": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'node --inspect=0.0.0.0:9229 --require ts-node/register src/gateway.ts'"
 	},
 	"dependencies": {
@@ -20,6 +21,7 @@
 	},
 	"devDependencies": {
 		"@types/cors": "^2.8.18",
-		"ts-node": "^10.9.2"
+		"ts-node": "^10.9.2",
+		"vitest": "^3.2.2"
 	}
 }
