--- a/e2e/package.json
+++ b/e2e/package.json
@@ -11,5 +11,9 @@
   "devDependencies": {
     "@playwright/test": "^1.52.0",
     "@types/node": "^22.15.22"
+  },
+  "dependencies": {
+    "dotenv": "^16.5.0",
+    "zod": "^3.25.56"
   }
 }
