--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,21 @@ jobs:
             - name: Run auth unit tests
               run: ./mvnw test
 
+    gateway-unit-tests:
+        runs-on: ubuntu-latest
+        defaults:
+            run:
+                working-directory: gateway
+        steps:
+            - uses: actions/checkout@v4
+            - uses: actions/setup-node@v4
+              with:
+                  node-version: lts/*
+            - name: Install dependencies
+              run: npm install -g pnpm && pnpm install
+            - name: Run gateway unit tests
+              run: pnpm test
+
     e2e-tests:
         runs-on: ubuntu-latest
         defaults:
