Print Docker logs on e2e failure

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,3 +95,6 @@ jobs:
             - name: Stop Docker services
               if: always()
               run: docker compose -f ../docker-compose.yml down
+            - name: Print logs on failure
+              if: failure()
+              run: docker compose -f ../docker-compose.yml logs
