--- a/gateway/package.json
+++ b/gateway/package.json
@@ -1,4 +1,5 @@
 {
+	"type": "module",
 	"scripts": {
 		"start": "npx --node-options='--inspect=0.0.0.0:9229' tsx src/gateway.ts",
 		"dev": "npx --node-options='--inspect=0.0.0.0:9229' tsx --inspect-brk src/gateway.ts",
