--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     environment:
       - NODE_ENV=${NODE_ENV}
       - WATCHPACK_POLLING=${WATCHPACK_POLLING}
-      - GATEWAY_DOMAIN=${GATEWAY_DOMAIN}
+      - NEXT_PUBLIC_GATEWAY_DOMAIN=${GATEWAY_DOMAIN}
     depends_on:
       - auth
     networks:
@@ -31,7 +31,7 @@ services:
     container_name: auth
     ports:
       - "8080:8080"
-      - "5841:5841" 
+      - "5841:5841" # TODO: remove this port in production. create docker profiles
     networks:
       - elk
     environment:
