--- a/gateway/package.json
+++ b/gateway/package.json
@@ -17,12 +17,12 @@
 		"express": "^4.21.2",
 		"graphql": "^16.11.0",
 		"node-fetch": "^3.3.2",
-		"nodemon": "^3.1.10",
 		"zod": "^3.25.42"
 	},
 	"devDependencies": {
 		"@types/cors": "^2.8.18",
 		"ts-node": "^10.9.2",
-		"vitest": "^3.2.2"
+		"vitest": "^3.2.2",
+		"nodemon": "^3.1.10"
 	}
 }
