--- a/gateway/package.json
+++ b/gateway/package.json
@@ -1,4 +1,7 @@
 {
+	"name": "frontend",
+	"version": "0.1.0",
+	"private": true,
 	"type": "module",
 	"scripts": {
 		"start": "npx --node-options='--inspect=0.0.0.0:9229' tsx src/gateway.ts",
