--- a/gateway/package.json
+++ b/gateway/package.json
@@ -24,8 +24,8 @@
 	},
 	"devDependencies": {
 		"@types/cors": "^2.8.18",
+		"nodemon": "^3.1.10",
 		"ts-node": "^10.9.2",
-		"vitest": "^3.2.2",
-		"nodemon": "^3.1.10"
+		"vitest": "^3.2.2"
 	}
 }
