--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,9 @@
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-draggable": "^4.4.6",
+    "react-grid-layout": "^1.5.1",
+    "react-resizable": "^3.0.5",
     "tailwind-merge": "^3.1.0",
     "tw-animate-css": "^1.2.5",
     "zod": "^3.24.2",
