--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@next/eslint-plugin-next": "^15.2.4",
     "@radix-ui/react-slot": "^1.1.2",
     "@tanstack/react-query": "^5.71.10",
+    "@types/react-grid-layout": "^1.3.5",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
