--- a/backend/auth/Dockerfile
+++ b/backend/auth/Dockerfile
@@ -12,7 +12,7 @@ RUN mvn package -DskipTests
 FROM amazoncorretto:24-alpine
 
 WORKDIR /app
-COPY --from=builder /app/target/auth-0.0.1-SNAPSHOT.jar app.jar
+COPY --from=builder /app/target/*.jar app.jar
 
 EXPOSE 8080 5841
 
