--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -141,12 +141,13 @@ services:
       - "4000:4000"
       - "9229:9229"
     networks:
-      - elk
+      - elk    
     environment:
       - AUTH_URL=${AUTH_URL}
       - AUTH_REDIRECT_URL=${AUTH_REDIRECT_URL}
       - GATEWAY_SECRET=${GATEWAY_SECRET}
       - FRONTEND_DOMAIN=${FRONTEND_DOMAIN}
+      - JWT_SECRET=${JWT_SECRET}
     depends_on:
       auth:
         condition: service_started
