--- a/gateway/package.json
+++ b/gateway/package.json
@@ -15,17 +15,20 @@
 		"@types/body-parser": "^1.19.5",
 		"@types/express": "^4.17.22",
 		"@types/express-serve-static-core": "^4.19.6",
+		"@types/jsonwebtoken": "^9.0.9",
 		"body-parser": "^2.2.0",
 		"cookie-parser": "^1.4.7",
 		"cors": "^2.8.5",
 		"express": "^4.21.2",
 		"graphql": "^16.11.0",
+		"jsonwebtoken": "^9.0.2",
 		"node-fetch": "^3.3.2",
 		"zod": "^3.25.42"
 	},
 	"devDependencies": {
 		"@types/cookie-parser": "^1.4.9",
 		"@types/cors": "^2.8.18",
+		"@types/node": "^24.0.1",
 		"nodemon": "^3.1.10",
 		"ts-node": "^10.9.2",
 		"vitest": "^3.2.2"
