feat(logging): integrate structured logging with Winston and Logstash
- Added a logger module using Winston for structured logging.
- Integrated Logstash transport for sending logs to Logstash in production.
- Enhanced logging in the gateway service with context-aware logs.
- Added request ID to logs for better traceability.
- Updated environment variable validation and error handling with logging.
- Improved token validation logging for better debugging.
- Refactored gateway service to utilize the new logger.
- Created a types file to extend Express Request with requestId.
- Updated TypeScript configuration to allow importing TS extensions.

fix(logstash): update Logstash configuration for improved logging

- Set log level in Logstash configuration using environment variable.
- Enhanced Logstash pipeline configuration to parse timestamps and add service-specific tags.
- Removed unnecessary fields from logs to streamline output.

--- a/docker-compose.elk.yml
+++ b/docker-compose.elk.yml
@@ -8,3 +8,15 @@ services:
     environment:
       LOGGING_LOGSTASH_SERVER: logstash:5044
       SPRING_PROFILES_ACTIVE: elk
+
+  gateway:
+    depends_on:
+      auth:
+        condition: service_started
+      logstash:
+        condition: service_healthy
+    environment:
+      ENABLE_LOGSTASH: "true"
+      LOGSTASH_HOST: logstash
+      LOGSTASH_PORT: 5044
+      LOG_LEVEL: info
