--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -6,8 +6,30 @@ input {
 }
 
 filter {
-  grok {
-    match => { "message" => "%{COMBINEDAPACHELOG}" }
+  date {
+    match => [ "timestamp", "ISO8601" ]
+  }
+  
+  if [application] == "gateway" {
+    mutate {
+      add_tag => [ "gateway", "nodejs" ]
+    }
+  }
+  
+  if [application] == "auth" {
+    mutate {
+      add_tag => [ "auth", "spring-boot", "java" ]
+    }
+  }
+  
+  if [level] {
+    mutate {
+      uppercase => [ "level" ]
+    }
+  }
+
+  mutate {
+    remove_field => [ "@version", "hostname", "level_value", "logstashServer", "pid", "port", "time" ]
   }
 }
 
@@ -15,7 +37,5 @@ output {
   elasticsearch {
     hosts => ["http://elasticsearch:9200"]
     index => "logs-%{+YYYY.MM.dd}"
-    user => "elastic"
-    password => "changeme"
   }
 }
