--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,6 +78,7 @@ services:
     environment:
       - discovery.type=single-node
       - xpack.security.enabled=false # temporary for development
+      - logger.org.elasticsearch=error
     ports:
       - "9200:9200"
     networks:
@@ -97,6 +98,7 @@ services:
     image: docker.elastic.co/logstash/logstash:8.16.6
     environment:
       - LOGSTASH_HTTP_HOST=${LOGSTASH_HTTP_HOST}
+      - LOG_LEVEL=error
     ports:
       - "5044:5044"
     networks:
@@ -119,6 +121,7 @@ services:
     image: docker.elastic.co/kibana/kibana:8.16.6
     environment:
       - ELASTICSEARCH_HOSTS=${ELASTICSEARCH_HOSTS}
+      - LOGGING_ROOT_LEVEL=error
     ports:
       - "5601:5601"
     networks:
@@ -131,7 +134,6 @@ services:
       retries: 3
       start_period: 20s
       timeout: 20s
-
   gateway:
     build:
       context: ./gateway
@@ -148,6 +150,11 @@ services:
       - GATEWAY_SECRET=${GATEWAY_SECRET}
       - FRONTEND_DOMAIN=${FRONTEND_DOMAIN}
       - JWT_SECRET=${JWT_SECRET}
+      - NODE_ENV=${NODE_ENV}
+      - LOG_LEVEL=${LOG_LEVEL:-info}
+      - ENABLE_LOGSTASH=${ENABLE_LOGSTASH:-false}
+      - LOGSTASH_HOST=${LOGSTASH_HOST:-logstash}
+      - LOGSTASH_PORT=${LOGSTASH_PORT:-5044}
     depends_on:
       auth:
         condition: service_started
