--- a/gateway/tsconfig.json
+++ b/gateway/tsconfig.json
@@ -9,7 +9,9 @@
 		"forceConsistentCasingInFileNames": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
-		"moduleResolution": "nodenext"
+		"moduleResolution": "nodenext",
+		"allowImportingTsExtensions": true,
+		"noEmit": true
 	},
 	"include": ["src/**/*"],
 	"exclude": ["node_modules", "dist"]
