--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@apollo/experimental-nextjs-app-support": "^0.12.2",
     "@next/eslint-plugin-next": "^15.2.4",
     "@radix-ui/react-slot": "^1.1.2",
+    "@sentry/nextjs": "^9.29.0",
     "@tanstack/react-query": "^5.71.10",
     "@types/react-grid-layout": "^1.3.5",
     "axios": "^1.8.4",
