--- a/gateway/package.json
+++ b/gateway/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@apollo/gateway": "^2.10.2",
 		"@apollo/server": "^4.12.1",
+		"@sentry/node": "^9.29.0",
 		"@types/body-parser": "^1.19.5",
 		"@types/express": "^4.17.22",
 		"@types/express-serve-static-core": "^4.19.6",
