--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,54 +15,55 @@
     "@apollo/client": "^3.13.8",
     "@apollo/client-integration-nextjs": "^0.12.2",
     "@apollo/experimental-nextjs-app-support": "^0.12.2",
-    "@next/eslint-plugin-next": "^15.2.4",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@next/eslint-plugin-next": "^15.3.3",
+    "@radix-ui/react-slot": "^1.2.3",
     "@sentry/nextjs": "^9.29.0",
-    "@tanstack/react-query": "^5.71.10",
+    "@tanstack/react-query": "^5.80.7",
     "@types/react-grid-layout": "^1.3.5",
-    "axios": "^1.8.4",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "lucide-react": "^0.487.0",
-    "next": "15.2.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "import-in-the-middle": "^1.14.2",
+    "lucide-react": "^0.515.0",
+    "next": "15.3.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-draggable": "^4.4.6",
     "react-grid-layout": "^1.5.1",
     "react-resizable": "^3.0.5",
-    "tailwind-merge": "^3.1.0",
-    "tw-animate-css": "^1.2.5",
-    "zod": "^3.24.2",
+    "require-in-the-middle": "^7.5.2",
+    "tailwind-merge": "^3.3.1",
+    "tw-animate-css": "^1.3.4",
+    "zod": "^3.25.64",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@graphql-codegen/cli": "^5.0.6",
+    "@eslint/eslintrc": "^3.3.1",
+    "@graphql-codegen/cli": "^5.0.7",
     "@graphql-codegen/typescript": "^4.1.6",
     "@graphql-codegen/typescript-operations": "^4.6.1",
     "@graphql-codegen/typescript-react-apollo": "^4.3.3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.10",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@typescript-eslint/eslint-plugin": "^8.29.0",
-    "@typescript-eslint/parser": "^8.29.0",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@types/node": "^24.0.1",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@typescript-eslint/eslint-plugin": "^8.34.0",
+    "@typescript-eslint/parser": "^8.34.0",
+    "@vitejs/plugin-react": "^4.5.2",
     "cross-env": "^7.0.3",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.4",
-    "eslint-config-prettier": "^10.1.1",
+    "eslint": "^9.29.0",
+    "eslint-config-next": "15.3.3",
+    "eslint-config-prettier": "^10.1.5",
     "graphql": "^16.11.0",
-    "jsdom": "^26.0.0",
+    "jsdom": "^26.1.0",
     "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4",
-    "typescript": "^5.8.2",
+    "prettier-plugin-tailwindcss": "^0.6.12",
+    "tailwindcss": "^4.1.10",
+    "typescript": "^5.8.3",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.1.1",
-    "vitest-mock-axios": "^0.1.0"
+    "vitest": "^3.2.3"
   }
 }
