--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -161,6 +161,29 @@ services:
       auth:
         condition: service_started
 
+  widget-registry:
+    build:
+      context: ./backend/widget-registry
+      dockerfile: Dockerfile
+    container_name: widget-registry
+    ports:
+      - "3001:3001"
+    networks:
+      - elk
+    environment:
+      - NODE_ENV=${NODE_ENV}
+      - PORT=3001
+    restart: always
+    develop:
+      watch:
+        - action: sync
+          path: ./backend/widget-registry
+          target: /app
+          ignore:
+            - node_modules/
+        - action: rebuild
+          path: ./backend/widget-registry/package.json
+
 networks:
   elk:
     driver: bridge
