--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ WATCHPACK_POLLING=true
 FRONTEND_DOMAIN=http://localhost:3000
 
 # Auth
-SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/personal_dashboard_auth
+SPRING_DATASOURCE_URL=jdbc:postgresql://auth-db:5432/personal_dashboard_auth
 SPRING_DATASOURCE_USERNAME=postgres
 SPRING_DATASOURCE_PASSWORD=password
 JWT_SECRET=your_jwt_secret_here
