--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,22 +56,22 @@ services:
       SENTRY_DSN: ${SENTRY_DSN}
       SENTRY_SEND_DEFAULT_PII: ${SENTRY_SEND_DEFAULT_PII}
     depends_on:
-      db:
+      auth-db:
         condition: service_started
 
-  db:
+  auth-db:
     image: postgres:latest
-    container_name: db
+    container_name: auth-db
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_DB: ${POSTGRES_DB_AUTH}
     networks:
       - elk
     ports:
       - "5432:5432"
     volumes:
-      - db_data:/var/lib/postgresql/data
+      - auth_db_data:/var/lib/postgresql/data
 
   elasticsearch:
     profiles: ["elk"]
@@ -184,12 +184,28 @@ services:
         - action: rebuild
           path: ./backend/widget-registry/package.json
 
+  widget-registry-db:
+    image: postgres:latest
+    container_name: widget-registry-db
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB_WIDGET_REGISTRY}
+    networks:
+      - elk
+    ports:
+      - "5433:5433"
+    volumes:
+      - widget_registry_db_data:/var/lib/postgresql/data
+
 networks:
   elk:
     driver: bridge
 
 volumes:
-  db_data:
+  auth_db_data:
+    driver: local
+  widget_registry_db_data:
     driver: local
   esdata:
     driver: local
