--- a/backend/widget-registry/.dockerignore
+++ b/backend/widget-registry/.dockerignore
@@ -1,1 +1,17 @@
 node_modules
+npm-debug.log
+dist
+.git
+.gitignore
+README.md
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.nyc_output
+coverage
+.coverage
+.env.example
+docker-compose*.yml
+Dockerfile*
