--- a/backend/widget-registry/package.json
+++ b/backend/widget-registry/package.json
@@ -17,7 +17,13 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "db:migrate:deploy": "prisma migrate deploy",
+    "db:migrate:reset": "prisma migrate reset --force",
+    "db:studio": "prisma studio"
   },
   "dependencies": {
     "@apollo/server": "^4.12.2",
@@ -27,7 +33,9 @@
     "@nestjs/core": "^11.1.3",
     "@nestjs/graphql": "^13.1.0",
     "@nestjs/platform-express": "^11.1.3",
+    "@prisma/client": "^6.9.0",
     "graphql": "^16.11.0",
+    "graphql-type-json": "^0.3.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
   },
@@ -49,6 +57,7 @@
     "globals": "^16.2.0",
     "jest": "^30.0.0",
     "prettier": "^3.5.3",
+    "prisma": "^6.9.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.1.1",
     "ts-jest": "^29.4.0",
