--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -160,7 +160,6 @@ services:
     depends_on:
       auth:
         condition: service_started
-
   widget-registry:
     build:
       context: ./backend/widget-registry
@@ -173,7 +172,11 @@ services:
     environment:
       - NODE_ENV=${NODE_ENV}
       - PORT=3001
+      - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@widget-registry-db:5432/${POSTGRES_DB_WIDGET_REGISTRY}?schema=public
     restart: always
+    depends_on:
+      widget-registry-db:
+        condition: service_started
     develop:
       watch:
         - action: sync
@@ -183,7 +186,6 @@ services:
             - node_modules/
         - action: rebuild
           path: ./backend/widget-registry/package.json
-
   widget-registry-db:
     image: postgres:latest
     container_name: widget-registry-db
@@ -194,7 +196,7 @@ services:
     networks:
       - elk
     ports:
-      - "5433:5433"
+      - "5433:5432"
     volumes:
       - widget_registry_db_data:/var/lib/postgresql/data
 
