--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,9 @@
     "@apollo/client-integration-nextjs": "^0.12.2",
     "@apollo/experimental-nextjs-app-support": "^0.12.2",
     "@next/eslint-plugin-next": "^15.3.3",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@sentry/nextjs": "^9.29.0",
     "@tanstack/react-query": "^5.80.7",
