--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@sentry/nextjs": "^9.29.0",
     "@tanstack/react-query": "^5.80.7",
     "@types/react-grid-layout": "^1.3.5",
