refactor: widget styling utilities and components
- Introduced a strategy pattern for background styling in widgets, allowing for better management of background combinations (solid colors, gradients, and images).
- Created new utility functions for color manipulation, including lightening, darkening, and saturation adjustments.
- Modularized widget styling logic into separate files for better organization and maintainability.
- Updated TaskWidget and WeatherWidget components to utilize new styling utilities and removed redundant code.
- Added predefined color and gradient presets for quick styling options.
- Fix oklch colors not showing visually in color input
- Fix migration drift in widget registry

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -186,6 +186,9 @@ services:
             - node_modules/
         - action: rebuild
           path: ./backend/widget-registry/package.json
+    volumes:
+      - ./backend/widget-registry/prisma:/usr/src/app/prisma
+
   widget-registry-db:
     image: postgres:latest
     container_name: widget-registry-db
