--- a/backend/widget-registry/Dockerfile
+++ b/backend/widget-registry/Dockerfile
@@ -1,18 +1,16 @@
-
-FROM node:24-alpine
+FROM node:24-alpine AS builder
 
 WORKDIR /usr/src/app
 
 COPY package*.json pnpm-lock.yaml ./
-
 RUN npm install -g pnpm
-
 RUN pnpm install --frozen-lockfile
 
 COPY . .
 
 RUN pnpm prisma generate
-RUN pnpm run build
+
+RUN pnpm build
 
 COPY entrypoint.sh /usr/local/bin/entrypoint.sh
 RUN chmod +x /usr/local/bin/entrypoint.sh
@@ -20,4 +18,4 @@ RUN chmod +x /usr/local/bin/entrypoint.sh
 EXPOSE 3000
 
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
-CMD ["node", "dist/main"]
+CMD ["node", "dist/main.js"]
