--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "culori": "^4.0.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "import-in-the-middle": "^1.14.2",
     "lucide-react": "^0.515.0",
@@ -51,6 +52,7 @@
     "@tailwindcss/postcss": "^4.1.10",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@types/culori": "^4.0.0",
     "@types/node": "^24.0.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
