--- a/backend/widget-registry/package.json
+++ b/backend/widget-registry/package.json
@@ -34,10 +34,13 @@
     "@nestjs/graphql": "^13.1.0",
     "@nestjs/platform-express": "^11.1.3",
     "@prisma/client": "^6.9.0",
+    "@sentry/nestjs": "^9.30.0",
     "graphql": "^16.11.0",
     "graphql-type-json": "^0.3.2",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.2"
+    "rxjs": "^7.8.2",
+    "winston": "^3.17.0",
+    "winston-logstash-ts": "^0.2.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
