--- a/docker-compose.elk.yml
+++ b/docker-compose.elk.yml
@@ -9,6 +9,16 @@ services:
       LOGGING_LOGSTASH_SERVER: logstash:5044
       SPRING_PROFILES_ACTIVE: elk
 
+  widget-registry:
+    depends_on:
+      logstash:
+        condition: service_healthy
+    environment:
+      ENABLE_LOGSTASH: "true"
+      LOGSTASH_HOST: logstash
+      LOGSTASH_PORT: 5044
+      LOG_LEVEL: info
+
   gateway:
     depends_on:
       auth:
