--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -154,8 +154,7 @@ services:
       - JWT_SECRET=${JWT_SECRET}
       - NODE_ENV=${NODE_ENV}
       - LOG_LEVEL=${LOG_LEVEL:-info}
-      - ENABLE_LOGSTASH=${ENABLE_LOGSTASH:-false}
-      - LOGSTASH_HOST=${LOGSTASH_HOST:-logstash}
+      - ENABLE_LOGSTASH=${ENABLE_LOGSTASH:-false}      - LOGSTASH_HOST=${LOGSTASH_HOST:-logstash}
       - LOGSTASH_PORT=${LOGSTASH_PORT:-5044}
     depends_on:
       auth:
@@ -173,6 +172,7 @@ services:
       - NODE_ENV=${NODE_ENV}
       - PORT=3001
       - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@widget-registry-db:5432/${POSTGRES_DB_WIDGET_REGISTRY}?schema=public
+      - GATEWAY_SECRET=${GATEWAY_SECRET}
     restart: always
     depends_on:
       widget-registry-db:
