--- a/backend/widget-registry/package.json
+++ b/backend/widget-registry/package.json
@@ -28,6 +28,7 @@
     "db:studio": "prisma studio"
   },
   "dependencies": {
+    "@apollo/gateway": "^2.11.0",
     "@apollo/server": "^4.12.2",
     "@apollo/subgraph": "^2.11.0",
     "@nestjs/apollo": "^13.1.0",
