feat: integrate Obsidian sync functionality into notes management
- Added support for creating, updating, and deleting notes with Obsidian sync options.
- Introduced new mutations for handling Obsidian sync operations in GraphQL.
- Updated the notes schema to include `source` and `obsidianPath` fields.
- Enhanced the `useNotes` hook to manage auto-sync settings and connection testing for Obsidian.
- Modified widget schemas to include Obsidian sync configuration options.
- Implemented validation for new Obsidian sync fields in widget schemas.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,7 +114,7 @@ jobs:
                   SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GITHUB_CLIENT_SECRET=${{ secrets.SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GITHUB_CLIENT_SECRET }}
                   SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GITHUB_REDIRECT_URI=${{ secrets.SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GITHUB_REDIRECT_URI }}
                   SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GITHUB_SCOPE=${{ secrets.SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GITHUB_SCOPE }}
-                  SENTRY_DSN=${{ secrets.SENTRY_DSN }}
+                  SENTRY_DSN_AUTH=${{ secrets.SENTRY_DSN_AUTH }}
                   SENTRY_SEND_DEFAULT_PII=${{ secrets.SENTRY_SEND_DEFAULT_PII }}
                   EOF
             - name: Start Docker services
