--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,7 @@ services:
       SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GITHUB_REDIRECT_URI: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GITHUB_REDIRECT_URI}
       SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GITHUB_SCOPE: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GITHUB_SCOPE}
       JAVA_OPTS: ${JAVA_OPTS}
-      SENTRY_DSN: ${SENTRY_DSN}
+      SENTRY_DSN_AUTH: ${SENTRY_DSN_AUTH}
       SENTRY_SEND_DEFAULT_PII: ${SENTRY_SEND_DEFAULT_PII}
     depends_on:
       auth-db:
@@ -214,6 +214,8 @@ services:
       - "8000:8000"
     networks:
       - elk
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     environment:
       - NODE_ENV=${NODE_ENV}
       - PORT=8000
