--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,15 @@
     "react-dom": "^19.1.0",
     "react-draggable": "^4.4.6",
     "react-grid-layout": "^1.5.1",
+    "react-markdown": "^10.1.0",
     "react-resizable": "^3.0.5",
+    "rehype-pretty-code": "^0.14.1",
+    "remark-callout": "^1.1.1",
+    "remark-directive": "^4.0.0",
+    "remark-footnotes": "^5.0.0",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
+    "remark-wiki-link": "^2.0.1",
     "require-in-the-middle": "^7.5.2",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.4",
