--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "import-in-the-middle": "^1.14.2",
     "lucide-react": "^0.515.0",
     "next": "15.3.3",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-draggable": "^4.4.6",
@@ -45,6 +46,7 @@
     "remark-math": "^6.0.0",
     "remark-wiki-link": "^2.0.1",
     "require-in-the-middle": "^7.5.2",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.4",
     "zod": "^3.25.64",
