feat: add sentry and logstash logging to the notes service, update debug sentry endpoints for all services

--- a/docker-compose.elk.yml
+++ b/docker-compose.elk.yml
@@ -30,3 +30,13 @@ services:
       LOGSTASH_HOST: logstash
       LOGSTASH_PORT: 5044
       LOG_LEVEL: info
+
+  notes:
+    depends_on:
+      logstash:
+        condition: service_healthy
+    environment:
+      ENABLE_LOGSTASH: "true"
+      LOGSTASH_HOST: logstash
+      LOGSTASH_PORT: 5044
+      LOG_LEVEL: info
