--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,7 @@ services:
       SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GITHUB_REDIRECT_URI: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GITHUB_REDIRECT_URI}
       SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GITHUB_SCOPE: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GITHUB_SCOPE}
       JAVA_OPTS: ${JAVA_OPTS}
-      SENTRY_DSN_AUTH: ${SENTRY_DSN_AUTH}
+      SENTRY_DSN: ${SENTRY_DSN_AUTH}
       SENTRY_SEND_DEFAULT_PII: ${SENTRY_SEND_DEFAULT_PII}
     depends_on:
       auth-db:
@@ -222,6 +222,8 @@ services:
       - NODE_ENV=${NODE_ENV}
       - PORT=8000
       - DATABASE_URL=postgresql+asyncpg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@notes-db:5432/${POSTGRES_DB_NOTES}
+      - SENTRY_DSN_NOTES=${SENTRY_DSN_NOTES}
+      - SENTRY_SEND_DEFAULT_PII=${SENTRY_SEND_DEFAULT_PII}
     restart: always
     depends_on:
       notes-db:
