--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -12,13 +12,25 @@ filter {
   
   if [application] == "gateway" {
     mutate {
-      add_tag => [ "gateway", "nodejs" ]
+      add_tag => [ "gateway", "nodejs", "express" ]
     }
   }
   
   if [application] == "auth" {
     mutate {
       add_tag => [ "auth", "spring-boot", "java" ]
+    }
+  }
+
+  if [application] == "notes" {
+    mutate {
+      add_tag => [ "notes", "fastapi", "python" ]
+    }
+  }
+
+  if [application] == "widget-registry" {
+    mutate {
+      add_tag => [ "widget-registry", "nodejs", "nestjs" ]
     }
   }
   
