--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,6 +57,24 @@ jobs:
             - name: Run gateway unit tests
               run: pnpm test
 
+    notes-unit-tests:
+        runs-on: ubuntu-latest
+        defaults:
+            run:
+                working-directory: backend/notes
+        steps:
+            - uses: actions/checkout@v4
+            - name: Set up Python 3.13
+              uses: actions/setup-python@v4
+              with:
+                  python-version: "3.13"
+            - name: Install dependencies
+              run: |
+                  python -m pip install --upgrade pip
+                  pip install -r requirements.txt
+            - name: Run notes unit tests
+              run: python -m pytest tests/ -v
+
     widget-registry-unit-tests:
         runs-on: ubuntu-latest
         defaults:
