--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
                   dotnet-version: "10.0.x"
                   dotnet-quality: "preview"
             - name: Restore dependencies
-              run: dotnet restore
+              run: dotnet restore tasks.csproj
             - name: Build
               run: dotnet build --no-restore
             - name: Run tasks unit tests
