--- a/backend/widget-registry/package.json
+++ b/backend/widget-registry/package.json
@@ -41,6 +41,7 @@
     "@sentry/nestjs": "^9.30.0",
     "graphql": "^16.11.0",
     "graphql-type-json": "^0.3.2",
+    "kafkajs": "^2.2.4",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "winston": "^3.17.0",
