--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - NODE_ENV=${NODE_ENV}
       - WATCHPACK_POLLING=${WATCHPACK_POLLING}
       - NEXT_PUBLIC_GATEWAY_DOMAIN=${GATEWAY_DOMAIN}
+      - NEXT_PUBLIC_FRONTEND_URL=${FRONTEND_DOMAIN}
     depends_on:
       - auth
     networks:
@@ -55,6 +56,7 @@ services:
       JAVA_OPTS: ${JAVA_OPTS}
       SENTRY_DSN: ${SENTRY_DSN_AUTH}
       SENTRY_SEND_DEFAULT_PII: ${SENTRY_SEND_DEFAULT_PII}
+      DOMAIN: ${DOMAIN}
     depends_on:
       auth-db:
         condition: service_started
@@ -152,7 +154,8 @@ services:
       - GATEWAY_SECRET=${GATEWAY_SECRET}
       - FRONTEND_DOMAIN=${FRONTEND_DOMAIN}
       - JWT_SECRET=${JWT_SECRET}
-      - NODE_ENV=${NODE_ENV}      
+      - NODE_ENV=${NODE_ENV}     
+      - DOMAIN=${DOMAIN} 
     depends_on:
       auth:
         condition: service_started
