refactor: fetch weather data server side

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - WATCHPACK_POLLING=${WATCHPACK_POLLING}
       - NEXT_PUBLIC_GATEWAY_DOMAIN=${GATEWAY_DOMAIN}
       - NEXT_PUBLIC_FRONTEND_URL=${FRONTEND_DOMAIN}
-      - NEXT_PUBLIC_WEATHER_API_KEY=${WEATHER_API_KEY}
+      - WEATHER_API_KEY=${WEATHER_API_KEY}
     depends_on:
       - auth
     networks:
