--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -54,7 +54,24 @@ server {
     client_header_timeout 60s;
     send_timeout 60s;
 
-    # API routes with rate limiting
+    # Frontend API routes (Next.js API routes)
+    location /api/weather {
+        limit_req zone=api burst=20 nodelay;
+        proxy_pass http://frontend;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+    }
+
+    # Gateway API routes
     location /api/ {
         limit_req zone=api burst=20 nodelay;
         proxy_pass http://gateway;
